add dummy data, more functionality

--- a/demo/index.html
+++ b/demo/index.html
@@ -11,13 +11,42 @@
 	<link rel="stylesheet" href="../css/main.css" />
 
 	<script src="../node_modules/sparkplug.js/sparkplug.js"></script>
+	<script defer src="../js/_.js"></script>
 	<script defer src="../js/tyler.js"></script>
 	<script defer src="../js/main.js"></script>
 
 </head>
 <body>
 
+	<div class="tile-cell">
+		<div class="tile tile-big"></div>
+	</div>
 
+	<div class="tile-cell">
+		<div class="tile tile-small"></div>
+		<div class="tile tile-small"></div>
+		<div class="tile tile-small"></div>
+		<div class="tile tile-small"></div>
+	</div>
+
+	<div class="tile-cell">
+		<div class="tile tile-small"></div>
+		<div class="tile tile-small"></div>
+		<div class="tile tile-small"></div>
+		<div class="tile tile-small"></div>
+	</div>
+
+	<div class="tile-cell">
+		<div class="tile tile-big"></div>
+	</div>
+
+	<div class="tile-cell">
+		<div class="tile tile-big"></div>
+	</div>
+
+	<div class="tile-cell">
+		<div class="tile tile-big"></div>
+	</div>
 
 </body>
 </html>
