flip effect on click

--- a/demo/index.html
+++ b/demo/index.html
@@ -18,14 +18,29 @@
 <body>
 
 	<div class="tile-cell">
-		<div class="tile tile-big"></div>
+		<div class="tile tile-big">
+			<div class="tile-front"></div>
+			<div class="tile-back"></div>
+		</div>
 	</div>
 
 	<div class="tile-cell">
-		<div class="tile tile-small"></div>
-		<div class="tile tile-small"></div>
-		<div class="tile tile-small"></div>
-		<div class="tile tile-small"></div>
+		<div class="tile tile-small">
+			<div class="tile-front"></div>
+			<div class="tile-back"></div>
+		</div>
+		<div class="tile tile-small">
+			<div class="tile-front"></div>
+			<div class="tile-back"></div>
+		</div>
+		<div class="tile tile-small">
+			<div class="tile-front"></div>
+			<div class="tile-back"></div>
+		</div>
+		<div class="tile tile-small">
+			<div class="tile-front"></div>
+			<div class="tile-back"></div>
+		</div>
 	</div>
 
 	<div class="tile-cell">
