flip fx look gooood

--- a/demo/index.html
+++ b/demo/index.html
@@ -26,20 +26,28 @@
 
 	<div class="tile-cell">
 		<div class="tile tile-small">
-			<div class="tile-front"></div>
-			<div class="tile-back"></div>
+			<div class="tile-inner">
+				<div class="tile-front"></div>
+				<div class="tile-back"></div>
+			</div>
 		</div>
 		<div class="tile tile-small">
-			<div class="tile-front"></div>
-			<div class="tile-back"></div>
+			<div class="tile-inner">
+				<div class="tile-front"></div>
+				<div class="tile-back"></div>
+			</div>
 		</div>
 		<div class="tile tile-small">
-			<div class="tile-front"></div>
-			<div class="tile-back"></div>
+			<div class="tile-inner">
+				<div class="tile-front"></div>
+				<div class="tile-back"></div>
+			</div>
 		</div>
 		<div class="tile tile-small">
-			<div class="tile-front"></div>
-			<div class="tile-back"></div>
+			<div class="tile-inner">
+				<div class="tile-front"></div>
+				<div class="tile-back"></div>
+			</div>
 		</div>
 	</div>
 
