programatically sort+layout tiles, randomize colors

--- a/demo/index.html
+++ b/demo/index.html
@@ -11,64 +11,10 @@
 	<link rel="stylesheet" href="../css/main.css" />
 
 	<script src="../node_modules/sparkplug.js/sparkplug.js"></script>
-	<script defer src="../js/tyler.js"></script>
+	<script src="../node_modules/color-scheme/lib/color-scheme.js"></script>
+	<script src="../js/tyler.js"></script>
 	<script defer src="../js/main.js"></script>
 
 </head>
-<body>
-
-	<div class="tile-cell">
-		<div class="tile tile-big">
-			<div class="tile-front"></div>
-			<div class="tile-back"></div>
-		</div>
-	</div>
-
-	<div class="tile-cell">
-		<div class="tile tile-small">
-			<div class="tile-inner">
-				<div class="tile-front"></div>
-				<div class="tile-back"></div>
-			</div>
-		</div>
-		<div class="tile tile-small">
-			<div class="tile-inner">
-				<div class="tile-front"></div>
-				<div class="tile-back"></div>
-			</div>
-		</div>
-		<div class="tile tile-small">
-			<div class="tile-inner">
-				<div class="tile-front"></div>
-				<div class="tile-back"></div>
-			</div>
-		</div>
-		<div class="tile tile-small">
-			<div class="tile-inner">
-				<div class="tile-front"></div>
-				<div class="tile-back"></div>
-			</div>
-		</div>
-	</div>
-
-	<div class="tile-cell">
-		<div class="tile tile-small"></div>
-		<div class="tile tile-small"></div>
-		<div class="tile tile-small"></div>
-		<div class="tile tile-small"></div>
-	</div>
-
-	<div class="tile-cell">
-		<div class="tile tile-big"></div>
-	</div>
-
-	<div class="tile-cell">
-		<div class="tile tile-big"></div>
-	</div>
-
-	<div class="tile-cell">
-		<div class="tile tile-big"></div>
-	</div>
-
-</body>
+<body></body>
 </html>
