--- a/demo/index.html
+++ b/demo/index.html
@@ -12,6 +12,7 @@
 
 	<script src="../node_modules/sparkplug.js/sparkplug.js"></script>
 	<script src="../node_modules/color-scheme/lib/color-scheme.js"></script>
+	<script src="../node_modules/tranny/tranny.standalone.js"></script>
 	<script src="../js/tyler.js"></script>
 	<script defer src="../js/main.js"></script>
 
