prevent click on move

--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
 <head>
 
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=false" />
 
 	<title>tyler | demo</title>
 
@@ -13,6 +13,7 @@
 	<script src="../node_modules/sparkplug.js/sparkplug.js"></script>
 	<script src="../node_modules/color-scheme/lib/color-scheme.js"></script>
 	<script src="../node_modules/tranny/tranny.standalone.js"></script>
+	<script src="../node_modules/textwidth/dist/textwidth.min.js"></script>
 	<script src="../js/tyler.js"></script>
 	<script defer src="../js/main.js"></script>
 
