rm colorscheme, sparkplug

--- a/demo/index.html
+++ b/demo/index.html
@@ -10,9 +10,11 @@
 	<link rel="stylesheet" href="../css/tyler.css" />
 	<link rel="stylesheet" href="../css/main.css" />
 
-	<script src="../node_modules/sparkplug.js/sparkplug.js"></script>
 	<script src="../node_modules/color-scheme/lib/color-scheme.js"></script>
-	<script src="../node_modules/tranny/tranny.standalone.js"></script>
+	<script src="../node_modules/tranny/node_modules/matrix-utilities/matrix-utilities.js"></script>
+	<script src="../node_modules/tranny/node_modules/transform-to-matrix/transform-to-matrix.js"></script>
+	<script src="../node_modules/tranny/node_modules/umodel/umodel.js"></script>
+	<script src="../node_modules/tranny/tranny.js"></script>
 	<script src="../js/tyler.js"></script>
 	<script defer src="../js/main.js"></script>
 
