--- a/demo/index.html
+++ b/demo/index.html
@@ -8,13 +8,11 @@
 	<title>tyler | demo</title>
 
 	<link rel="stylesheet" href="../css/tyler.css" />
-	<link rel="stylesheet" href="../css/main.css" />
+	<link rel="stylesheet" href="main.css" />
 
-	<script src="../node_modules/tranny/node_modules/matrix-utilities/matrix-utilities.js"></script>
-	<script src="../node_modules/tranny/node_modules/transform-to-matrix/transform-to-matrix.js"></script>
-	<script src="../node_modules/tranny/node_modules/umodel/umodel.js"></script>
+	<script src="umodel.js"></script>
 	<script src="../js/tyler.js"></script>
-	<script defer src="../js/main.js"></script>
+	<script defer src="main.js"></script>
 
 </head>
 <body>
