--- a/demo/index.html
+++ b/demo/index.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="main.css" />
 
 	<script src="umodel.js"></script>
-	<script src="../js/tyler.js"></script>
+	<script src="../tyler.js"></script>
 	<script defer src="main.js"></script>
 
 </head>
